[package]
name = "toykv"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempfile = "3.10.0"

[dependencies]
crossbeam-skiplist = "0.1.3"
fastrand = "2.3.0"
ouroboros = "0.18.5"
sbbf-rs-safe = "0.3.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
siphasher = "1.0.1"
xxhash-rust = {version = "0.8.15", features = ["xxh3"]}
